--- a/src/main/webapp/index_studSurvey.html
+++ b/src/main/webapp/index_studSurvey.html
@@ -2,7 +2,7 @@
 
     <!-- Start: Head Section-->
     <head>
-        <title>Student Survey | Dipak_Meher GMU CS</title>
+        <title>Student Survey | Hw2_Assignment</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
